# parser

./: CMakeLists.txt  example  info.h.in  run.sh  runMultiple.sh
examples/: aha.al  dash.al  doteq.al  ehe.al  equal.al  fnspikes.al  lilEqual.al  maxEqual.al
src/: main.c
src/codeAnalysis/: execTree.c  execTree.h  interface.h  lexer.c  lexer.h  parser.c
src/codeParsing/: execTree.c  execTree.h  interface.h  lexer.c  lexer.h  parser.c
src/error/: interface.h  messages.c
src/messages/: interface.h  loging.c  predefMessages.h
